# conda_env2sqlite

./: README.md  main.py  pyproject.toml  setup.py
src/db_funcs/: db_funcs.py
src/file_funcs/: file_funcs.py
src/process_funcs/: process_funcs.py
