[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "Conda2DB"
version = "0.11"
authors = [
  { name="Matthieu Vizuete-Forster", email="matthieu.vizueteforster@genomicsengland.co.uk" },
]
description = "A package for extracting the python package content of Anaconda or Miniconda environments and placing these within an SQLite3 database"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"