[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "conda_env2sqlite"
version = "1.0.0"
authors = [
  { name="Matthieu Vizuete-Forster", email="matthieu.vizueteforster@genomicsengland.co.uk" },
]
description = "A package for extracting the python package content of Anaconda or Miniconda environments and placing these within an SQLite3 database"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mvforster/conda_env2sqlite"
"Bug Tracker" = "https://github.com/mvforster/conda_env2sqlite/issues"